--- a/servidor_web/bd2025/package.json
+++ b/servidor_web/bd2025/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
